--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,14 @@
 ::-webkit-scrollbar-track:hover {
     background: #cbd5e0;
 }
+.login-page {
+    position: relative;
+    right: -100%;
+    transition: right 0.4s;
+}
 
 .active-login-page {
     right: 4%;
-    transition: all 0.5s;
+    transition: right 0.4s;
 }
+    
