--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,9 +24,10 @@
 ::-webkit-scrollbar-track:hover {
     background: #cbd5e0;
 }
+
 .login-page {
     position: relative;
-    right: -100%;
+    right: -120%;
     transition: right 0.4s;
 }
 
@@ -34,4 +35,53 @@
     right: 4%;
     transition: right 0.4s;
 }
-    
+
+#hambuger-icon {
+    display: none;
+}
+
+/* @media (max-width:800px) {
+    .banner-section {
+        flex-direction: column;
+    }
+
+} */
+.active-nav {
+    right: -5%;
+    transition: all 0.5s;
+}
+
+@media (max-width:1000px) {
+    #hambuger-icon {
+        display: block;
+    }
+
+    nav {
+
+
+        position: absolute;
+        top: 10%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+        height: 100vh;
+        width: 100%;
+        z-index: 9;
+        background-color: white;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        right: -100%;
+        transition: all 0.5s;
+
+    }
+
+}
+
+@media (max-width:800px) {
+    .top-part {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+}
